removed compiler argument that is not necessary anymore